add some pictures

--- a/home.html
+++ b/home.html
@@ -6,16 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
-
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
     <!--CSS Style -->
     <link rel="stylesheet" href="./src/style.css">
 
@@ -25,11 +15,33 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
+
+    <!--Google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
+
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
 
-    <h1>Hellow world <i class="fa-brands fa-instagram"></i></h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly">
+                <img src="images/climate-change-card.png"
+                    alt="a yellow card with the phrase fighting climate change together" class="img-fluid">
+            </div>
+            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly ">
+                <img src="images/elephant.png" alt="a picture of an elephant walking" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+
 
 </body>
 
