--- a/home.html
+++ b/home.html
@@ -6,16 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--CSS Style -->
-    <link rel="stylesheet" href="./src/style.css">
-
-    <!-- Bootstrap -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
-
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,6 +15,16 @@
 
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    <!--CSS Style -->
+    <link rel="stylesheet" href="./src/style.css">
+
+    <!-- Bootstrap -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -35,9 +35,17 @@
                 <img src="images/climate-change-card.png"
                     alt="a yellow card with the phrase fighting climate change together" class="img-fluid">
             </div>
-            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly ">
+            <div class="col-sm-5 col-md-6 justify-content-evenly ">
                 <img src="images/elephant.png" alt="a picture of an elephant walking" class="img-fluid">
             </div>
+            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly">
+                <img src="images/whale.png" alt="a yellow card with the phrase fighting climate change together"
+                    class="img-fluid ">
+            </div>
+            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly ">
+                <img src="images/small tree-inthedesert.png" alt="a picture of an elephant walking" class="img-fluid ">
+            </div>
+
         </div>
     </div>
 
