--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Google font-->
+    <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,32 +19,29 @@
     <!--CSS Style -->
     <link rel="stylesheet" href="./src/style.css">
 
-    <!-- Bootstrap -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly">
+
+    <div class="container p-5">
+        <div class="row justify-content-evenly">
+            <div class="col-sm-4 col-md-6">
                 <img src="images/climate-change-card.png"
                     alt="a yellow card with the phrase fighting climate change together" class="img-fluid">
             </div>
-            <div class="col-sm-5 col-md-6 justify-content-evenly ">
-                <img src="images/elephant.png" alt="a picture of an elephant walking" class="img-fluid">
+            <div class="col-sm-4 col-md-6 ">
+                <img src="images/elephant.png" alt="a picture of an elephant walking" class="img-fluid custome-image">
             </div>
-            <div class="col-sm-5 col-md-6 d-flex justify-content-evenly">
-                <img src="images/whale.png" alt="a yellow card with the phrase fighting climate change together"
-                    class="img-fluid ">
-            </div>
-
         </div>
     </div>
+
+    <h2 class="text-center">Let us work together to create a cleaner, more sustainable future for our planet.</h2>
 
 
 
