--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Climate Change Crisis</title>
+    <title>Climate Change</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,32 +16,100 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!--CSS Style -->
-    <link rel="stylesheet" href="./src/style.css">
-
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!--CSS Style -->
+    <link rel="stylesheet" href="./src/style.css">
 
 </head>
 
 <body>
 
-
     <div class="container p-5">
         <div class="row justify-content-evenly">
-            <div class="col-sm-4 col-md-6">
+            <div class="col-sm-12 col-md-6">
                 <img src="images/climate-change-card.png"
                     alt="a yellow card with the phrase fighting climate change together" class="img-fluid">
             </div>
-            <div class="col-sm-4 col-md-6 ">
+            <div class="col-sm-12  col-md-6 ">
                 <img src="images/elephant.png" alt="a picture of an elephant walking" class="img-fluid custome-image">
             </div>
         </div>
     </div>
 
-    <h2 class="text-center">Let us work together to create a cleaner, more sustainable future for our planet.</h2>
+    <!--Main-->
+    <div>
+        <h2 class="text-center">Let us work together to create a
+        </h2>
+        <h2 class="text-center">cleaner & sustainable future for our planet. </h2>
+    </div>
+
+    <!--Section-->
+    <div class="col-sm-12 col-md-12 text-center">
+        <p class="custome-paragraph">We are taking action on climate change by working together with partners and
+            communities.
+        <p class="custome-paragraph"> <strong>Our goal</strong> is clear
+            "a sustainable future for both people
+            and the planet".
+        </p>
+        <p class="custome-paragraph"> Together, we can make a lasting impact.</p>
+    </div>
+
+    <div class="text-center mt-4">
+        <a href="#" class="project-button">View Projects</a>
+    </div>
+
+    <!--Section-->
+    <div class="container text-center mt-5">
+        <div class="row justify-content-evenly pt-5">
+            <div class="col-md-2">
+                <p class="custom-section">Protect</p>
+            </div>
+            <div class="col-md-2 position-relative">
+                <img src="./images/small-tree.png" class="img-fluid custom-image"
+                    alt="image of a small tree on the desert.">
+                <p class="position-absolute top-50 start-50 translate-middle custome-text">Our</p>
+            </div>
+            <div class="col-md-2">
+                <p class="custom-section">Planet</p>
+            </div>
+            <div class="col-md-2 position-relative">
+                <img src="./images/picture-of-horses.png" class="img-fluid custom-image" alt="A picture of some horses">
+                <p class="position-absolute top-50 start-50 translate-middle custome-text">Together</p>
+            </div>
+
+        </div>
+    </div>
+
+    <!--Article-->
+    <div>
+        <h3>Our intiave for 2025</h3>
+        <p>Explore the projects we’re implementing to safeguard nature.</p>
+    </div>
+
+    <div>
+        <ul>
+            <li>
+                <p class="intiave">Title</p>
+                <p class="project">Green Energy Adoption</p>
+                <p class="intiave">Tag</p>
+                <p class="project">Renewable Energy</p>
+                <p class="intiave"> Date</p>
+                <p class="project">February 10, 2025 </p>
+            </li>
+        </ul>
+    </div>
+
+    <!--
+    <p> Reforestation Projects </p>
+    <p> Coastal Restoration </p>
+    <p>Sustainable Farming </p>
+    <p>Climate Resilience Training</p>
+    -->
+
+
 
 
 
