--- a/home.html
+++ b/home.html
@@ -175,6 +175,25 @@
             </div>
         </div>
 
+        <div class="col ">
+            <div class="row">
+                <div class="col-12 col-md-2 ">
+                    <span class="small">newsletter</span>
+                </div>
+
+                <div class="col-12 col-md-6 text-start ms-auto">
+                    <h4>Subscribe to our newsletter to get the lates update on missions projects & initiaves.</h4>
+                    <div class="col-12 col-md-6 ">
+                        <form>
+                            <label for="email" class="visually-hidden">Email</label>
+                            <input type="email" id="email" class="form-control" placeholder="Enter your email address">
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
