--- a/home.html
+++ b/home.html
@@ -250,8 +250,25 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <footer class="center">
+            <p>
+
+            </p>
+            <p>
+                Designed with inspiration from
+                <a href="https://dribbble.com/" target="_blank" class="footer-link">Dribbble.</a>
+                <br>
+
+                <a href="https://unsplash.com/" target="_blank" class="footer-link">Images courtesy of Unsplash.</a>
+                <br>
+                <strong>&copy; 2025</strong> Code and development lovingly crafted by
+                <a href="https://tirzasamosir.netlify.app/" target="_blank" class="footer-name">Tirza Samosir.</a>
+                <br>
+                Part of the SheCodes Workshop Final Project.
+            </p>
+        </footer>
     </div>
 
 
