social media added

--- a/home.html
+++ b/home.html
@@ -227,23 +227,27 @@
                 </div>
             </div>
 
-            <div class="col ">
-                <div class="row d-flex justify-content-between align-items-center">
+            <!--Footer-->
 
-                    <div class="col-12 col-md-4 subscribe ">
+            <div class="col ">
+                <div class="row d-flex justify-content-between align-items-center pt-5">
+
+                    <div class="col-12 col-md-4 text-start subscribe ">
                         <span class="small">newsletter</span>
                     </div>
 
-                    <div class="col-12 col-md-8 text-start ms-auto subscribe ">
+                    <div class="col-12 col-md-8 text-start ms-auto subscribe">
                         <h4>Subscribe to our newsletter to get the lates update on missions
                             projects & initiaves.</h4>
-                        <div class="col-12 col-md-8 ">
+                        <div class="col-12 col-md-8">
                             <form class="subscribe-form">
                                 <label for="email" class="visually-hidden">Email</label>
                                 <div class="input-group">
                                     <input type="email" id="email" class="form-control"
                                         placeholder="Enter your email address">
-                                    <button type="submit" class="btn">Subscribe</button>
+                                    <button type="submit" class="btn">Subscribe
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -252,22 +256,41 @@
             </div>
         </div>
 
-        <footer class="center">
-            <p>
 
-            </p>
-            <p>
-                Designed with inspiration from
-                <a href="https://dribbble.com/" target="_blank" class="footer-link">Dribbble.</a>
-                <br>
+        <div class="custome-line-footer"></div>
 
-                <a href="https://unsplash.com/" target="_blank" class="footer-link">Images courtesy of Unsplash.</a>
-                <br>
-                <strong>&copy; 2025</strong> Code and development lovingly crafted by
-                <a href="https://tirzasamosir.netlify.app/" target="_blank" class="footer-name">Tirza Samosir.</a>
+        <div class="col">
+            <div class="row align-items-center">
+                <div class="col-4 text-start">
+                    <p class="footer-paragraph">
+                        <span class="footer-year">&copy; 2025</span> Code with 🤍 by
+                        <a href="https://tirzasamosir.netlify.app/" target="_blank" class="footer-name">Tirza
+                            Samosir.</a>
+                    </p>
+                </div>
 
-            </p>
-        </footer>
+                <div class="col-4 text-center">
+                    Designed with inspiration from
+                    <a href="https://dribbble.com/" target="_blank" class="footer-link">Dribbble.</a>
+                    <br>
+
+                    <a href="https://unsplash.com/" target="_blank" class="footer-link">Images courtesy of
+                        Unsplash.</a>
+                </div>
+
+                <div class="col-4 social-media d-flex flex-column align-items-end mt-4">
+                    <p class="mb-3 ">Follow us on social media</p>
+
+                    <!-- Icons centered properly using w-50 inside the right column-->
+                    <div class="d-flex justify-content-evenly w-50 icon">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
 
